Mise en service du module de chargement niveaux.
- J'ai ajouté le code que Laura m'a envoyé par mail
- Le jeu utilise maintenant vraiment le module de chargement, et ça
marche !
Mais ça n'a pas marché du premier coup, il a fallu faire quelques
modifs... Le chargement d'un fichier se fait de manière particulière sur
Android. Il faut soit utiliser les ressources, soit les assets. J'ai
choisi d'utiliser les Assets car le nom du fichier se donne par un
string et non pas par un R.id qui ne peut pas être concaténé avec le
numéro du niveau. Il a donc fallu changer quelques lignes et quelques
paramètres. Notamment dans le constructeur de la classe Niveau, on doit
donner en paramètre directement le Stream du fichier à lire. (car pour
aller piocher dans les Assets, il fallait avoir le "context", celui-ci
n'est pas accessible dans la classe Niveau.)